aplicando grid de boostrap y mas correcciones

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </div>
  <div class="col-sm-6 bg-text-white p-3">
 <article class="noticias ramoneras">
-      <h3>Noticias Ramoneras</h3>
+      <h3><strong>Noticias Ramoneras</h3></strong>
         <a href="https://es.wikipedia.org/wiki/Ramones"> Wikipedia Ramonera </a> <!--enlace absoluto-->
           <div class= "noticias">               
           <p> Marky Ramone anunció que se estará presentando nuevamente en la Argentina el próximo 7 de octubre con un único show en el Teatro Flores de la Ciudad de Buenos Aires. Al igual que el año pasado, el legendario baterista de los Ramones regresará al país con banda renovada y todos los éxitos que forman parte de los once álbumes que grabó junto al cuarteto neoyorkino. Las entradas anticipadas ya están disponibles través de sistema Passline y en los siguiente puntos de venta: Almacén Mala Difusión (CABA), La Estaka (Quilmes) y Locuras (Morón).
@@ -105,15 +105,15 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./images/" alt="Los Angeles" class="d-block" style="width:100%">
+      <img src="./images/3.jpeg" alt="Los Angeles" class="d-block" style="width:100%">
     </div>
     <div class="carousel-item">
-      <img src="chicago.jpg" alt="Chicago" class="d-block" style="width:100%">
+      <img src="./images/mirando.jpeg" alt="Chicago" class="d-block" style="width:100%">
     </div>
     <div class="carousel-item">
-      <img src="ny.jpg" alt="New York" class="d-block" style="width:100%">
+      <img src="./images/8.jpg" alt="New York" class="d-block" style="width:100%">
     </div>
-  </div>
+    
   
   <!-- Left and right controls/icons -->
   <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
@@ -124,17 +124,12 @@
   </button>
 </div>
 
-<div class="container-fluid mt-3">
-  <h3>Carousel Example</h3>
-  <p>The following example shows how to create a basic carousel with indicators and controls.</p>
-</div>
-
 <!-- *********************************************** -->
 <footer class="footer-07">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-12 text-center">
-        <h5 class="footer-heading"> <p>THE RAMONES</h5></p>
+        <h5 class="footer-heading"> <strong><p>THE RAMONES</h5></p></strong>
         <p class="menu">
           <a href="index.html">Home</a>
           <a href="./pages/Contactos.html">Contactos</a>
