--- a/pages/Contactos.html
+++ b/pages/Contactos.html
@@ -39,7 +39,7 @@
 
  
   <div id="Contactate"> 
-    <h3>Contactate</h3>
+    <h3><strong>Contactate</h3></strong>
     <form action="" method="" enctype="">
       <label for="">Correo electronico</label>
         <input type="text" placeholder="ingrese su correo">
@@ -68,7 +68,7 @@
   <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-12 text-center">
-      <h5 class="footer-heading"> <p>THE RAMONES</h5></p>
+      <h5 class="footer-heading"> <strong><p>THE RAMONES</h5></p><strong>
         <p class="menu">
           <a href="../index.html">Home</a>
           <a href="./Contactos.html">Contactos</a>
