--- a/pages/sitios_amigos.html
+++ b/pages/sitios_amigos.html
@@ -59,7 +59,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 text-center">
-          <h5 class="footer-heading"> <p>THE RAMONES</h5></p>
+          <h5 class="footer-heading"><strong> <p>THE RAMONES</h5></p></strong>
           <p class="menu">
             <a href="../index.html">Home</a>
             <a href="./Contactos.html">Contactos</a>
