--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -38,13 +38,17 @@
 </div>
 <br>
 <div class=" titulohistoria"><h1> <strong> HISTORIA</strong></h1></div>
-<div class ="texto">
-  <section>
+  <div class="container-fluid mt-3">
+    <div class="row">
+      <div class="col-sm-6 bg-text-white p-3">
     <article>
       <p> El 2 de febrero de 1976, los Ramones empezaron a grabar su primer álbum, Ramones, con un presupuesto de 6400 dólares,15​ en contraste con los altos presupuestos que gastaban los grandes grupos de rock.2​ Dos semanas y media después, el disco ya estaba terminado, y salió a la venta el 23 de abril. El 10 de mayo compartieron escenario con la banda inglesa Dr. Feelgood. Este concierto fue presenciado por un empresario inglés que les ofreció realizar un concierto en el Roundhouse de Londres el 4 de julio junto con el grupo de San Francisco The Flamin' Groovies y los ingleses The Stranglers. El concierto resultó un éxito y allanó considerablemente el camino a las bandas inglesas de punk como Sex Pistols o The Clash.14​ De este concierto se dice que lo presenciaron los futuros líderes de estas bandas que se harían famosas poco después, un hecho falso puesto que ese mismo día The Clash se encontraba teloneando a los Sex Pistols en el Black Swan de Sheffield.16​ El concierto de los Ramones en el Roundhouse está considerado como un momento crucial en el desarrollo del punk en todo el mundo.2​
       Los siguientes dos álbumes fueron publicados en 1977 bajo los nombres de Leave Home y Rocket to Russia, este último alabado por la revista Rolling Stone como "el mejor ‘rock & roll’ estadounidense del año". Ambos álbumes fueron producidos por Tony Bongiovi, primo de Jon Bon Jovi. Rocket to Russia contiene los tres únicos sencillos que consiguieron entrar en las listas de éxitos de los Estados Unidos: "Sheena Is a Punk Rocker" (número 81), "Rockaway Beach" (puesto 66) y "Do You Wanna Dance" (puesto 86).2​ El 31 de diciembre de 1977 grabaron el directo It's Alive, un álbum doble que recoge su actuación en el Rainbow Theatre de Londres, finalmente publicado en 1979 solo en Europa y Asia.2​ El título es una referencia a la película de terror del mismo nombre. Tommy, cansado de hacer giras con el grupo, abandonó la banda para ser productor,12​ y fue sustituido por Mark Bell, que accedió al puesto con el nombre de Marky Ramone. Marky había trabajado anteriormente con un grupo de rock sureño llamado Dust, que publicó dos álbumes en 1971 y 1972, y había grabado junto a Richard Hell el disco Blank Generation.12​
       En 1978 la banda publicó el primer álbum con su nuevo miembro, Road to Ruin. Este álbum incluye por primera vez en la discografía de los Ramones canciones con guitarras acústicas, varias baladas, el primer solo de guitarra de Johnny y las dos primeras canciones de más de tres minutos, aunque los resultados de ventas siguieron siendo desfavorables. No obstante, la canción "I Wanna Be Sedated" se convirtió en una de las más famosas del cuarteto neoyorquino.17​ </p>
       <br>
+    </article>
+      </div>
+    <div class="col-sm-6 bg-text-white p-3">
       <strong>1980-1989</strong>
       <br>
       <p>Tras el debut de la banda en la industria del cine en la película Rock 'n' Roll High School, dirigida por Allan Arkush y producida por Roger Corman (1979), el legendario productor Phil Spector, que había alcanzado la fama produciendo discos de las Ronettes, los Beatles y Tina Turner entre muchos otros, se interesó por la banda y produjo su álbum End of the Century en 1980,14​ que ascendió hasta el puesto 44.º en los Estados Unidos, siendo el disco que más alto llegó en las listas de éxitos en la carrera de la banda.2​ Sin embargo, el resultado no satisfizo a los miembros del grupo, alegando diferencias entre ellos y Spector, quien llegó a apuntar a Dee Dee con una pistola para que repitiera un riff.14​18​ En varias entrevistas, Johnny declaró que él siempre había estado a favor del punk más agresivo, mientras que End of the Century presenta un material más apartado del sonido clásico del grupo debido a la influencia de Spector, destacando el sonido suave de "Baby, I Love You" (una versión de las Ronettes que, no obstante, se convirtió en el sencillo más exitoso del grupo, alcanzando el octavo lugar en el Reino Unido),2​ muy lejos del característico punk del cuarteto neoyorquino. A pesar de las diferencias musicales, el álbum resultó un éxito de público y la banda se dirigió por primera vez a España, donde dieron tres conciertos.
@@ -53,15 +57,20 @@
       </p>
     </article>
   </section>
-</div>
-</div>
-<div class="container">
-  <div class="row align-items-center">
-    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-center flex-wrap d-grid gap-4">
-    <div class="miembros"> <h2> <strong> MIEMBROS DE LA BANDA </strong></h2></div>
-  <h2> <p> JOEY RAMONE </p> </h2>
-<div class="texto1">
-  <section>
+    </div>
+  </div>
+  </div>
+  </div>
+
+<div class="miembros"> <h2> <strong> MIEMBROS DE LA BANDA </strong></h2></div>
+  
+
+
+<div class="container-fluid mt-3">
+  <div class="row">
+    <div class="col-sm-6 bg-text-white p-3">
+    <h3><strong><p> JOEY RAMONE </p></strong> </h3>
+    <section>
     <article>
       <p>
         Joey Ramone nació en Forest Hills, New York , el 19 de mayo del año 1951. Es conocido mundialmente por ser el cantante, y a la vez la cara visible, de una de las bandas de rock más importantes de la historia, The Ramones.
@@ -78,11 +87,11 @@
 	      En el año 2002, posterior a la muerte de Joey, colocaron a los Ramones en el Hall of Fame del rock. Llevando adelante lo que una vez él había soñado que pasara.
       </p>
     </article>
-  </section>
-</div>
-<div class="texto2">
-<h2> <p> JOHNNY RAMONE </p> </h2>
-<section>
+    </section>
+    </div>
+  <div class="col-sm-6 bg-text-white p-3">
+    <h3><strong><p> JOHNNY RAMONE </p></strong></h3>
+    <section>
     <article>
       <p>
         Johnny Ramone nació el 8 de Octubre del año 1948 en Long Island.
@@ -107,8 +116,9 @@
     </article>
   </section>
 </div>
-<div class="texto3"></div>
-<h2> <p> DEE DEE RAMONE </p> </h2>
+  
+<div class="col-sm-6 bg-text-white p-3">
+<h3><strong><p> DEE DEE RAMONE </p></strong></h3>
   <section>
     <article>
       <p>
@@ -128,8 +138,8 @@
     </article>
   </section>
 </div>
-<div class="texto4">
-<h2> <p> TOMMY RAMONE </p> </h2>
+<div class="col-sm-6 bg-text-white p-3">
+<h3><strong><p> TOMMY RAMONE </p></strong> </h3>
 <section>
     <article>
       <p> 
@@ -154,8 +164,8 @@
     </article>
   </section>
 </div>
-<div class="texto5">
-<h2> <p> MARKY RAMONE </p> </h2>
+
+<h3><strong><p> MARKY RAMONE </p></strong></h3>
   <section>
     <article>
       <p>
@@ -172,14 +182,14 @@
     </article>
   </section>
 </div>
-    </div>
-  </div>
+</div>
+</div>
   
 <footer class="footer-07">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-12 text-center">
-        <h5 class="footer-heading"> <p>THE RAMONES</h5></p>
+        <h5 class="footer-heading"><strong> <p>THE RAMONES</strong></h5></p>
         <p class="menu">
           <a href="../index.html">Home</a>
           <a href="./Contactos.html">Contactos</a>
