--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css"> 
     <title>The Ramones</title>
-    <link rel="icon" type="image/x-icon" href="./images/9.jpg">
+    <link rel="icon" type="image/x-icon" href="./images/Ramones/010.png">
   </head>
 
   <body>
     <!-- Menu************************************************* -->
     <header class=" sticky-top">
       <nav class="navbar navbar-dark bg-secondary navbar-expand-lg">
-      <a class="navbar-brand" href="index.html"> <img class="logo" src="./images/010.png" alt="ramones"></a>
+      <a class="navbar-brand" href="index.html"> <img class="logo" src="./images/Ramones/010.png" alt="ramones"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -105,13 +105,13 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./images/3.jpeg" alt="Los Angeles" class="d-block" style="width:100%">
+      <img src="./images/Ramones/3.jpeg" alt="Los Angeles" class="d-block" style="width:100%">
     </div>
     <div class="carousel-item">
-      <img src="./images/mirando.jpeg" alt="Chicago" class="d-block" style="width:100%">
+      <img src="./images/Ramones/mirando.jpeg" alt="Chicago" class="d-block" style="width:100%">
     </div>
     <div class="carousel-item">
-      <img src="./images/8.jpg" alt="New York" class="d-block" style="width:100%">
+      <img src="./images/Ramones/8.jpg" alt="New York" class="d-block" style="width:100%">
     </div>
     
   
