--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -18,7 +18,7 @@
 <header class=" sticky-top">
   <nav class="navbar navbar-dark bg-secondary navbar-expand-lg">
     <div class="container ">
-      <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/010.png" alt="ramones"></a>
+      <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/Ramones/010.png" alt="ramones"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
