--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
 <div class="container-fluid mt-3">
 <div class="row">
-  <div class="col-sm-6 bg-text-white p-3">
+  <div class="col-sm bg-text-white p-3">
 <div class="Ramones"> 
   <p><h2><strong>The Ramones</strong></h2></p>
   <article> 
@@ -71,7 +71,7 @@
     </article>
 </div>
   </div>
- <div class="col-sm-6 bg-text-white p-3">
+ <div class="col-sm bg-text-white p-3">
 <article class="noticias ramoneras">
       <h3><strong>Noticias Ramoneras</h3></strong>
         <a href="https://es.wikipedia.org/wiki/Ramones"> Wikipedia Ramonera </a> <!--enlace absoluto-->
@@ -105,13 +105,13 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./images/Ramones/3.jpeg" alt="Los Angeles" class="d-block" style="width:100%">
+      <img src="./images/Ramones/3.jpeg" alt="Los Angeles" class="d-block" style="width:90%">
     </div>
     <div class="carousel-item">
-      <img src="./images/Ramones/mirando.jpeg" alt="Chicago" class="d-block" style="width:100%">
+      <img src="./images/Ramones/mirando.jpeg" alt="Chicago" class="d-block" style="width:90%">
     </div>
     <div class="carousel-item">
-      <img src="./images/Ramones/8.jpg" alt="New York" class="d-block" style="width:100%">
+      <img src="./images/Ramones/8.jpg" alt="New York" class="d-block" style="width:90%">
     </div>
     
   
